adicionado para criar cosumir a api de produtos e pessoa